# rio-vrt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml  test.vrt  test_separate.vrt  toto.ipynb  toto.vrt  tutu.vrt
.github/workflows/: release.yaml  unit.yaml
docs/: conf.py  index.rst  usage.rst
rio_vrt/: __init__.py  enums.py  vrt.py
tests/: conftest.py  test_rio_vrt.py  test_src.py
tests/data/: cut_image.py  tile_0.tiff.aux.xml  tile_1.tiff.aux.xml  tile_10.tiff.aux.xml  tile_11.tiff.aux.xml  tile_12.tiff.aux.xml  tile_13.tiff.aux.xml  tile_14.tiff.aux.xml  tile_15.tiff.aux.xml  tile_2.tiff.aux.xml  tile_3.tiff.aux.xml  tile_4.tiff.aux.xml  tile_5.tiff.aux.xml  tile_6.tiff.aux.xml  tile_7.tiff.aux.xml  tile_8.tiff.aux.xml  tile_9.tiff.aux.xml
tests/test_rio_vrt/: (6, 6)_vrt.vrt  average_vrt.vrt  complete_vrt.vrt  highest_vrt.vrt  hollow_vrt.vrt  stack_vrt.vrt
