[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rio-vrt"
version = "0.1.0"
description = "A simple librairy to build a vrt from multiple raster source relying only on rasterio"
keywords = ["skeleton", "Python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.6.9"
dependencies = ["rasterio", ]

[[project.authors]]
name = "pierrick rambaud"
email = "pierrick.rambaud49@gmail.com"

[project.license]
text = "MIT"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/12rambau/rio-vrt"

[project.optional-dependencies]
dev = ["pre-commit", "commitizen", "nox", "mypy"]
test = ["pytest", "pytest-sugar", "pytest-cov", "pytest-deadfixtures", "pytest-regressions", "xmlschema", "natsort", "beautifulsoup4", "lxml"]
doc = ["sphinx", "pydata-sphinx-theme", "sphinx-copybutton", "sphinx-design", "sphinx-icon", "sphinx-btn"]

[tool.setuptools]
include-package-data = false
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
include = ["rio_vrt*"]
exclude = ["docs*", "tests*"]

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = false
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "rio_vrt/__init__.py:__version__",
    "docs/conf.py:release"
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
ignore-init-module-imports = true
fix = true
select = ["E", "F", "W", "I", "D", "RUF"]
ignore = ["E501"]  # line too long | Black take care of it

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["rio_vrt"]

[tool.doc8]
ignore = ["D001"] # we follow a 1 line = 1 paragraph style

[tool.mypy]
scripts_are_modules = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true

[tool.licensecheck]
using = "PEP631:test;dev;doc"
